fixing up some code

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head><title>AI Humanizer</title></head>
   <body>
-    <button id="humanizeBtn">Humanize Selected Text</button>
+    <button id="humanizeBtn">Humanize Text</button>
     <script src="popup.js"></script>
   </body>
 </html>
